--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,5 @@
 cmake_minimum_required(VERSION 3.0)
 project("ConsoleMinesweeper" VERSION 1.0.0)
 
-include_directories(src)
+add_subdirectory(src)
+add_subdirectory(main)
