--- a/src/Commands/CMakeLists.txt
+++ b/src/Commands/CMakeLists.txt
@@ -1,5 +1,7 @@
 add_library(Commands
     src/Commands.cpp 
-    src/Commands.hpp)
+    src/Commands.hpp
+    src/ConsoleColor.hpp
+)
 
 target_include_directories(Commands PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/src")
